Started creating methods in the different classes

--- a/IoTModbus/IoTModbus/IoTModbus.csproj
+++ b/IoTModbus/IoTModbus/IoTModbus.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComHandler.cs" />
     <Compile Include="GUI.cs">
       <SubType>Form</SubType>
     </Compile>
