--- a/IoTModbus/IoTModbus/IoTModbus.csproj
+++ b/IoTModbus/IoTModbus/IoTModbus.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report.cs" />
+    <Compile Include="Transaction.cs" />
     <EmbeddedResource Include="GUI.resx">
       <DependentUpon>GUI.cs</DependentUpon>
     </EmbeddedResource>
