--- a/IoTModbus/IoTModbus/IoTModbus.csproj
+++ b/IoTModbus/IoTModbus/IoTModbus.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>GUI.cs</DependentUpon>
     </Compile>
     <Compile Include="GUIFacade.cs" />
+    <Compile Include="IO.cs" />
     <Compile Include="ModbusADU.cs" />
     <Compile Include="ModbusPDU.cs" />
     <Compile Include="ModbusTCP.cs" />
@@ -66,6 +67,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report.cs" />
     <Compile Include="Transaction.cs" />
+    <Compile Include="welcomeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="welcomeForm.Designer.cs">
+      <DependentUpon>welcomeForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="GUI.resx">
       <DependentUpon>GUI.cs</DependentUpon>
     </EmbeddedResource>
@@ -79,6 +86,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="welcomeForm.resx">
+      <DependentUpon>welcomeForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
